--- a/app/assets/stylesheets/simple-line-icons.css.erb
+++ b/app/assets/stylesheets/simple-line-icons.css.erb
@@ -6,22 +6,16 @@
 
 @font-face {
 	font-family: 'Simple-Line-Icons';
-	src:url('<%= font_path('Simple-Line-Icons.eot') %>?v=2.2.2');
-	src:url('<%= font_path('Simple-Line-Icons.eot') %>?#iefix&v=2.2.2') format('embedded-opentype'),
-		url('<%= font_path('Simple-Line-Icons.ttf') %>?v=2.2.2') format('truetype'),
-		url('<%= font_path('Simple-Line-Icons.woff') %>?v=2.2.2') format('woff'),
-		url('<%= font_path('Simple-Line-Icons.woff2') %>?v=2.2.2') format('woff2'),
-		url('<%= font_path('Simple-Line-Icons.svg') %>#Simple-Line-Icons?v=2.2.2') format('svg');
+	src:url('<%= font_path('Simple-Line-Icons.eot') %>?v=2.3.2');
+	src:url('<%= font_path('Simple-Line-Icons.eot') %>?v=2.3.2#iefix') format('embedded-opentype'),
+		url('<%= font_path('Simple-Line-Icons.ttf') %>?v=2.3.2') format('truetype'),
+		url('<%= font_path('Simple-Line-Icons.woff') %>?v=2.3.2') format('woff'),
+		url('<%= font_path('Simple-Line-Icons.woff2') %>?v=2.3.2') format('woff2'),
+		url('<%= font_path('Simple-Line-Icons.svg') %>#Simple-Line-Icons?v=2.3.2') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
-/* Use the following CSS code if you want to have a class per icon */
-/*
-Instead of a list of all class selectors,
-you can use the generic selector below, but it's slower:
-[class*="icon-"] {
-*/
 .icon-user,
 .icon-people,
 .icon-user-female,
@@ -56,7 +50,10 @@ you can use the generic selector below, but it's slower:
 .icon-check,
 .icon-clock,
 .icon-plus,
+.icon-minus,
 .icon-close,
+.icon-exclamation,
+.icon-organization,
 .icon-trophy,
 .icon-screen-smartphone,
 .icon-screen-desktop,
@@ -103,7 +100,7 @@ you can use the generic selector below, but it's slower:
 .icon-film,
 .icon-feed,
 .icon-drop,
-.icon-drawar,
+.icon-drawer,
 .icon-docs,
 .icon-doc,
 .icon-diamond,
@@ -182,7 +179,7 @@ you can use the generic selector below, but it's slower:
 .icon-reload,
 .icon-settings,
 .icon-star,
-.icon-symble-female,
+.icon-symbol-female,
 .icon-symbol-male,
 .icon-target,
 .icon-credit-card,
@@ -194,7 +191,7 @@ you can use the generic selector below, but it's slower:
 .icon-social-linkedin,
 .icon-social-pinterest,
 .icon-social-github,
-.icon-social-gplus,
+.icon-social-google,
 .icon-social-reddit,
 .icon-social-skype,
 .icon-social-dribbble,
@@ -216,7 +213,6 @@ you can use the generic selector below, but it's slower:
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 .icon-user:before {
   content: "\e005";
 }
@@ -319,8 +315,17 @@ you can use the generic selector below, but it's slower:
 .icon-plus:before {
   content: "\e095";
 }
+.icon-minus:before {
+  content: "\e615";
+}
 .icon-close:before {
   content: "\e082";
+}
+.icon-exclamation:before {
+  content: "\e617";
+}
+.icon-organization:before {
+  content: "\e616";
 }
 .icon-trophy:before {
   content: "\e006";
@@ -460,7 +465,7 @@ you can use the generic selector below, but it's slower:
 .icon-drop:before {
   content: "\e03e";
 }
-.icon-drawar:before {
+.icon-drawer:before {
   content: "\e03f";
 }
 .icon-docs:before {
@@ -697,7 +702,7 @@ you can use the generic selector below, but it's slower:
 .icon-star:before {
   content: "\e09b";
 }
-.icon-symble-female:before {
+.icon-symbol-female:before {
   content: "\e09c";
 }
 .icon-symbol-male:before {
@@ -733,7 +738,7 @@ you can use the generic selector below, but it's slower:
 .icon-social-github:before {
   content: "\e60c";
 }
-.icon-social-gplus:before {
+.icon-social-google:before {
   content: "\e60d";
 }
 .icon-social-reddit:before {
